responsive alignment issue

--- a/app/design/frontend/Alfakher/hookahwholesalers/Magento_Checkout/web/css/source/module/_minicart.less
+++ b/app/design/frontend/Alfakher/hookahwholesalers/Magento_Checkout/web/css/source/module/_minicart.less
@@ -398,7 +398,7 @@
                 right: -90px !important;
                 &::before,
                 &::after {
-                    right: 90px !important;
+                    right: 100px !important;
                 }
             }
         }
@@ -416,6 +416,13 @@
         &::before,
         &::after {
             right: 42px !important;
+        }
+        &.block-quotecart {
+            &::before,
+            &::after {
+                right: -120px !important;
+            }
+            
         }
     }
 }
@@ -487,6 +494,12 @@
             &::before,
             &::after {
                 right: 145px !important;
+            }
+            &.block-quotecart {
+                &::before,
+                &::after {
+                    right: 160px !important;
+                }
             }
             #minicart-content-wrapper,
             #quotecart-content-wrapper {
