--- a/app/design/frontend/Alfakher/hookahwholesalers/Magento_Theme/web/css/source/_module.less
+++ b/app/design/frontend/Alfakher/hookahwholesalers/Magento_Theme/web/css/source/_module.less
@@ -2357,14 +2357,14 @@
                 .left_section {
                     align-items: center;
                     display: flex;
-                    flex-basis: 68%;
+                    flex-basis: 62%;
                     justify-content: space-between;
                 }
                 .right_section {
                     align-items: center;
                     align-items: end;
                     display: flex;
-                    flex-basis: 32%;
+                    flex-basis: 38%;
                     justify-content: flex-end;
                     span.counter.qty.empty {
                         display: none;
@@ -2895,6 +2895,7 @@
                 }
                 .right_section {
                     align-items: center;
+                    flex-basis: 35%;
                     .minicart-wrapper .text,
                     .sign-in .sign-up {
                         display: none;
